--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ dev/*
 framed.sty
 paper/*cache/*
 data/1000/
+paper/dcpo_macrointerest_files/*
+data-raw/ElectionIndices.pdf
+data-raw/es_data-v41/*
+data-raw/swiid9_4/*
