--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ dev/*
 framed.sty
 paper/*cache/*
 data/1000/
+data/dcpo_surveys/
 paper/dcpo_macrointerest_files/*
 data-raw/ElectionIndices.pdf
 data-raw/es_data-v41/*
