--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 *.nav
 *.snm
 *.toc
+*.gz
 dev/*
 framed.sty
 paper/*cache/*
@@ -25,3 +26,4 @@ data-raw/swiid9_4.zip
 data/dcpo_output.rds
 data/result_ill.rds
 data/result_ppc.rds
+BJPOLS*
